fix(index.html): update broken links and journal app status
Update decentralized voting dapp URL and fix journal apps' status from WIP to completed
Add missing site and github links for journal apps
Change journal apps connection style from dashed to solid line

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                     decentralized-voting-dapp["Decentralized Voting DApp"]:::FRONTEND_DECENTRALIZED
                                       desc: "Interfaccia decentralizzata per il voto"
                                       pos: -200,-50,150
-                                      site: "https://cdm4upstdl7n3kbaooekc6nxgrrfjnazeocmunigrettyv2562rq.trump-ario.store/ENnKPlMa_t2oIHOIoXm3NGJUtBkjhMo1BoknPFdd9qM"
+                                      site: "https://cdm4upstdl7n3kbaooekc6nxgrrfjnazeocmunigrettyv2562rq.arweave.net/ENnKPlMa_t2oIHOIoXm3NGJUtBkjhMo1BoknPFdd9qM"
                                       github: "https://ardrive.trump-ario.store/#/file/d0895fc6-2085-4914-85c9-99104bf05f21/view"
 
                                     assembly-dapp["Assembly Centralized App"]:::FRONTEND_CENTRALIZED
@@ -440,13 +440,17 @@
                     pos: -300,200,50
                     blockchain: "#"
 
-      journal-centralized["Journal Centralized App"]:::WIP_FRONTEND
-                    desc: "Sito centralizzato giornale (WIP)"
+      journal-centralized["Journal Centralized App"]:::FRONTEND_CENTRALIZED
+                    desc: "Sito centralizzato giornale"
                     pos: -250,200,100
+                    site: "https://itisenricofermi.github.io/giornale_cs/"
+                    github: "https://github.com/ITISEnricoFermi/giornale_cs"
 
-      journal-decentralized["Journal Decentralized App"]:::WIP_FRONTEND
-                    desc: "Sito decentralizzato giornale (WIP)"
+      journal-decentralized["Journal Decentralized App"]:::FRONTEND_DECENTRALIZED
+                    desc: "Sito decentralizzato giornale"
                     pos: -350,200,100
+                    site: "https://hnglekggyech44efeqxfla4b5gbya4cjfod2iamb65ar5i7fcqca.arweave.net/O0yyKMbBBH5whSQuVYOB6YOAcEkrh6QBgfdBHqPlFAQ"
+                    github: "https://github.com/DuPont9029/giornale_cs"
 
       %% Collegamenti
                                     %% ==> Verde Solido (Active)
@@ -473,7 +477,7 @@
 
             journal-centralized ==> new-contract
             journal-decentralized ==> new-contract
-            journal-centralized ==o journal-decentralized
+            journal-centralized === journal-decentralized
     </script>
 
     <script>
