--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
       new-contract["Journal Smart Contract"]:::BACKEND_CONTRACT
                     desc: "Smart contract per gestire il giornale scolastico"
                     pos: -300,200,50
-                    blockchain: "#"
+                    blockchain: "https://etherscan.io/token/0x6462a6c527373a2ee3f1415503ae4bab5acd5618"
 
       journal-centralized["Journal Centralized App"]:::FRONTEND_CENTRALIZED
                     desc: "Sito centralizzato giornale"
